[package]
name = "dodo-payments"
version = "0.1.0"
description = "Dodo Payments Desktop App"
authors = ["Dodo Payments"]
license = "MIT"
repository = ""
default-run = "dodo-payments"
edition = "2021"
rust-version = "1.77"

[lib]
name = "app_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
open = "5"
