[package]
name = "dodo-payments"
version = "0.1.5"
description = "Dodo Payments Desktop App"
authors = ["Dodo Payments"]
license = "GPL-3.0-or-later"
repository = "https://github.com/dodopayments/dodo-desktop"
default-run = "dodo-payments"
edition = "2021"
rust-version = "1.77"

[lib]
name = "app_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["time", "sync"] }
open = "5"

# Native GTK widgets for the Linux titlebar (back/forward buttons).
# Pinned to 0.18 to match the gtk-rs version used by tauri-runtime-wry.
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
